= lgtk-0.8.0.4 =

Depend on lensref-0.2

= lgtk-0.8.0.3 =

Relax dependencies

= lgtk-0.8 =

Lots of changes since the previously announced version, lgtk-0.5.3.

== New features ==

* New GLFW backend - Gtk is not strictly needed any more
* Diagrams canvas with mouse and keyboard interaction support
* Widget rendering in canvas
* Horizontal sliders (called scales in Gtk)
* Updated demo application

== Architectural changes ==

* Lens references splitted off to the separate package lensref.
* Switch from data-lens to Edward Kmett's lens library
* Upgrade to work with GHC 8.2
* Repository moved to GitHub

== Inner changes ==

* Cleaned up widgets interface: simpler inner representation of widgets; eliminate `SafeIO` and `action`

== Other changes ==

* Bugfixes


= lgtk-0.5.3 =

* bugfix: handle focus out events for entries
* bugfix: run postponed actions at widget initialization

= lgtk-0.5.2 =

* Better support for references with equality
* Documentation fixes and cleanup
* Inner change: safer state handling with MVars

= lgtk-0.5.1 =

* Documentation fixes and cleanup
* Try to support Haskell Platform 2012.4.0.0

= lgtk-0.5 =

* Do not use monadic lenses any more.
* Support for asynchronous events.
* Lazily created tabs.
* Inactive tabs are really inactive (event handlers are detached).
* File references watch the files. When the file changes, the GUI is updated.
* References with inherent identity (makes defining auto-sensitive buttons easier)
* Experimental support for coloured buttons.
* More examples in the demo application.
* Lots of inner changes.
